FEATURE: Use libkdcraw for RAW image processing instead of a bundled and outdated dcraw copy.

Epson R-D1 RAW format (.erf) should be supported better...

BUG: 130781
CCBUG: 141877
BUG: 145941

svn path=/branches/extragear/kde3/graphics/kphotoalbum/; revision=701359